fixing overflows from different components

--- a/src/components/HeadBanner/HeadBanner.scss
+++ b/src/components/HeadBanner/HeadBanner.scss
@@ -1,6 +1,8 @@
 .banner_container {
-    width: 100%;
-    overflow: hidden;
+        width: auto;
+          height: 100vh;
+          overflow: hidden;
+          position: relative;
 }
 
 #header_video {
